# cetana

./: .gitignore  Cargo.toml  README.md  benchmark_compare.py  build.rs  clippy.toml
cuda/: bits_floatn.h  comprehensive_compat.h  cuda_gcc_compat.h  cuda_init.cpp  cuda_runtime_wrapper.h  fixed_math.h  gcc13_compat.h  kernels.cu  kernels_wrapper.cu  nvcc_flags.cmake
examples/: basic_gender_train.rs  basic_xor_function.rs  benchmark_matmul.rs  benchmark_ops.rs  bgemm_check.rs  conv_example.rs  model_save_load.rs  pooling_example.rs
examples/datas/: gender.csv
examples/gpt2/: config.rs  dataloader.rs  main.rs  model.rs
shaders/: basic_ops.comp  binary_ops.comp  reduction.comp  unary_ops.comp
shaders/metal/: binary_ops.metal  matrix_ops.metal  operations.metal  reduction.metal  shaders.metallib
shaders/vulkan/: matmul.comp
src/: autograd.rs  lib.rs  log.rs  loss.rs  middleware.rs  optimizer.rs  prelude.rs  serialize.rs
src/backend/: buffer.rs  device.rs  feature.rs  graph.rs  mod.rs
src/backend/cpu/: compute.rs  core.rs  cpu_buffer.rs  mod.rs  parallel.rs
src/backend/cuda/: backend.rs  compute.rs  core.rs  launch.rs  mod.rs  stream.rs
src/backend/mps/: backend.rs  compute.rs  core.rs  mod.rs
src/backend/rocm/: mod.rs
src/backend/vulkan/: backend.rs  buffer.rs  compute.rs  core.rs  descriptor.rs  memory.rs  mod.rs
src/nn/: conv.rs  dropout.rs  embedding.rs  layernorm.rs  linear.rs  mod.rs  pooling.rs  random.rs
src/nn/activation/: mod.rs  relu.rs  sigmoid.rs  silu.rs  softmax.rs  swish.rs  tanh.rs
src/tensor/: creation.rs  dag.rs  display.rs  error.rs  manipulation.rs  mod.rs  ops.rs  reduction.rs  sampling.rs  serialization.rs  shape.rs
src/tensor/dtype/: mod.rs
src/tensor/dtype/bfloat16/: cast.rs  mod.rs  ops.rs
src/tensor/dtype/bfloat8/: cast.rs  mod.rs  ops.rs
src/tensor/dtype/float16/: cast.rs  mod.rs  ops.rs
src/tensor/dtype/float32/: cast.rs  mod.rs  ops.rs
src/tensor/dtype/float64/: cast.rs  mod.rs  ops.rs
