[package]
name = "cetana"
version = "0.1.0"
edition = "2021"

[features]
default = ["cpu"]
cpu = []
cuda = []
vulkan = ["dep:ash"]
mps = ["dep:metal"]
wgpu = []

[dependencies]
aporia = "0.1.1"
ash = { version = "0.38.0", optional = true, features = ["linked","debug","std"] }
metal = { version = "0.30.0", optional = true, features = ["mps"] }




[dev-dependencies]
csv = "1.3"
rand = "0.8.5"
pinax = "0.1.0"
flate2 = "1.0.34"
reqwest = "0.12.9"
tokio = { version = "1.41.0", features = ["full"] }

[build-dependencies]
cmake = "0.1"

[profile.dev]
debug = true

[profile.release]
opt-level = 3
