[package]
name = "cetana"
version = "0.0.1"
edition = "2024"
description = "Yet Another Neural Network Library"
license = "Apache-2.0"
categories = ["science"]
build = "build.rs"
authors = ["Eira <eira@nornity.com>"]

[lints.clippy]
absolute_paths = "deny"
result_large_err = "deny"
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "warn"
expect_used = "warn"

[features]
default = ["cpu"]
cpu = []
cuda = []
mps = ["dep:metal"]
gpu = ["dep:laminax-runtime"]
rocm = ["gpu"]
vulkan = ["dep:ash", "dep:vulkano"]
wgpu = []
opencl = []
rayon = ["dep:rayon"]

[dependencies]
aporia = "0.2.0"
laminax-dag   = { path = "/mnt/data2/Repository/laminax/laminax-dag" }
laminax-types = { path = "/mnt/data2/Repository/laminax/laminax-types" }
laminax-runtime = { path = "/mnt/data2/Repository/laminax/laminax-runtime", optional = true, features = ["gpu"] }
ash = { version = "0.38.0", optional = true, features = ["linked","debug","std"] }
log = "0.4.22"
metal = { version = "0.32.0", optional = true, features = ["mps"] }
# Use the local numina so cetana and the laminax stack share ONE numina crate.
# (crates.io numina would be a second, type-incompatible instance — its `DTypeId`
# would not match laminax_types' `TensorDesc.dtype_id`.)
numina = { path = "/mnt/data2/Repository/numina" }
rayon = { version = "1.10.0", optional = true }
vulkano = { version = "0.34.1", optional = true }

[dev-dependencies]
csv = "1.3"
pinax = "0.1.0"
flate2 = "1.0.34"
reqwest = { version = "0.12.9", features = ["json","blocking"] }
tokio = { version = "1.41.0", features = ["full"] }

[build-dependencies]
cmake = "0.1"

[profile.dev]
debug = true

[profile.release]
opt-level = 3
